feat: add hsr apis
