# apps/server/internals/hsr/entities.go
@@ -1,18 +1,49 @@
 package hsr
 
+import (
+	"api/internals/common"
+	"api/internals/food"
+)
+
 type HSRCalcBody struct {
 	Category         string  `json:"category"`
-	ConcentratedFnvl float64 `json:"concentrated_fnvl"`
+	ConcentratedFnvl float64 `json:"concentratedFnvl"`
 	Energy           float64 `json:"energy"`
 	Fibre            float64 `json:"fibre"`
 	Fnvl             float64 `json:"fnvl"`
 	Name             string  `json:"name"`
 	Protein          float64 `json:"protein"`
-	SaturatedFat     float64 `json:"saturated_fat"`
+	SaturatedFat     float64 `json:"saturatedFat"`
 	Sodium           float64 `json:"sodium"`
-	TotalSugars      float64 `json:"total_sugars"`
+	TotalSugars      float64 `json:"totalSugars"`
 }
 
 type HSRCalcResponse struct {
 	Data float64 `json:"data"`
+}
+
+type HSRIntakeQuery struct {
+	common.Pagination
+	UserId string `query:"userId" json:"userId,omitempty" validate:"required"`
+	Search string `query:"search" json:"search"`
+}
+
+type HSRIntakeBody struct {
+	UserId string `json:"userId"`
+	FoodId int    `json:"foodId"`
+}
+
+type HSRIntake struct {
+	Id     int    `json:"id"`
+	UserId string `json:"-"`
+	FoodId int    `json:"-"`
+	food.Food
+}
+
+func (i HSRIntake) TableName() string {
+	return "hsr_intakes"
+}
+
+func (i HSRIntakeBody) TableName() string {
+	return "hsr_intakes"
 }
